--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "Jakefile.js",
   "dependencies": {
     "csso": "^1.3.11",
+    "fs-extra": "^0.11.0",
     "uglify-js": "^2.4.15"
   },
   "devDependencies": {},
